--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -25,10 +25,9 @@
 }
 
 .waveButton {
-  cursor: pointer;
+  text-align: center;
   margin-top: 16px;
   padding: 8px;
   border: 0;
   border-radius: 5px;
-  
 }
